✅ Переделал dto в record ✅ Просматривает баланс